# spo

./: CMakeLists.txt  README.md  architecture.pdsl  assemble_res.txt  commands.txt  listing.txt  main.c  main.h  parser.c  program  tree.c  tree.h
code/: asm_gen.c  asm_gen.h
files/: in2.txt  input.txt  out.ptptb  output.txt
graph/: execution.c  execution.h  utils.c  utils.h
listing/: listing.c  listing.h
source/: lexems.l  parser.y
